--- a/srcs/.env
+++ b/srcs/.env
@@ -1,24 +1,26 @@
 DOMAIN_NAME=akaraca.42.fr
+### Web sitesinin erişim adresini belirlemek için kullanılıyor. ###
 
-# # MYSQL SETUP
+### MySQL Veritabanı Ayarları ###
 MYSQL_HOSTNAME=mariadb
 MYSQL_DATABASE=wordpress
 MYSQL_USER=akaraca
 MYSQL_PASSWORD=pass123
 MYSQL_ROOT_PASSWORD=passroot123
+### https://localhost/adminer sayfasından veya mariadb image'inden mysql komut ile bağlantı sağlandığında kullanılır. ###
 
+### WordPress Site Ayarları ###
 WP_URL=akaraca.42.fr
 WP_TITLE=wordpress
 
+### WordPress Yönetici Kullanıcı Bilgileri ###
 WP_ADMIN_LOGIN=root
 WP_ADMIN_PASSWORD=passroot123
 WP_ADMIN_EMAIL=root@42.fr
+### https://localhost/wp-login.php sayfasından wordpress'e yönetici girişini sağlamak için kullanılır. ###
 
+### WordPress Kullanıcı Bilgileri ###
 WP_USER_LOGIN=akaraca
 WP_USER_PASSWORD=pass123
 WP_USER_EMAIL=akaraca@42.fr
-
-# USER=akaraca
-
-# # certificates
-# CERTS_=./etc/ssl/certs/nginx.crt
+### https://localhost/wp-login.php sayfasından wordpress'e kullanıcı girişini sağlamak için kullanılır. ###
