--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -31,3 +31,206 @@ server {
 		fastcgi_pass adminer:9000;
 	}
 }
+
+################################################################### INFO ####################################################################
+
+### for Nginx helpful sites ###
+# https://www.nginx.com/resources/wiki/start/topics/examples/full/
+# https://www.coderrocketfuel.com/article/default-nginx-configuration-file-inside-sites-available-default
+# https://wordpress.org/documentation/article/nginx/
+# https://www.hafifbilgiler.com/hafif-bilgiler/yazilim/linux/liniux-uzerinde-nginx-kurulumu/
+
+### nginx.conf with comment ###
+
+# 'server': bloğu, Nginx sunucusunun nasıl davranacağını ve hangi taleplere nasıl cevap vereceğini belirten ana yapıdır.
+#	Belirli, bir IP adresi veya alan adı üzerinden gelen isteklere yanıt vermek için kullanılır.
+# 📌server {
+#
+# 	'listen 443 ssl;' ifadesi, Nginx'in 443 numaralı bağlantı noktasından gelen SSL/TLS şifrelemeli istekleri dinlemesi gerektiğini ifade eder.
+#		SSL/TLS şifrelemesi, iletişimi şifrelemek ve güvenli hale getirmek için kullanılır.
+#		443 numalaralı bağlantı noktası, genellikle HTTPS protokolü tarafından kullanılır.
+#  	Eğerki 'listen 443;' şeklinde kullanılsaydı, belirtilen bağlantı noktası üzerinden gelen istekler şifrelenmez.
+#		Yani bu şekilde kullanıldığında, Nginx'in güvenli bir HTTPS bağlantısı sağlamak için SSL/TLS şifrelemesi kullanmaz.
+#		Eğer kullanıcılardan hassas bilgilerin toplandığı, güvenliği önemli olan bir web sitesi veya uygulamanız varsa, HTTPS üzerinden güvenli iletişim sağlamak önemlidir.
+#		HTTPS kullanımı, özellikle güvenlik ve veri gizliliği önemli olan web siteleri için şiddetle tavsiye edilir.
+#	📌listen 443 ssl;
+#
+# 	'listen [::]443 ssl;' ifadesi, Nginx'in IPv6 desteğini aktif ettiğini ve yine 443 numaralı bağlantı noktasından gelen SSL/TLS şifrelemeli istekleri IPv6 üzerinden de dinlemesi gerektiğini ifade eder.
+# 	!!! Subjectte IPv6 için atıfta bulunmadığı için gerek olmayabilir.
+#	📌listen [::]:443 ssl;
+#
+# 	'server_name akaraca.42.fr;' ifadesi, Nginx'in hangi ana bilgisayar adı veya alan adı ile gelen istekleri yönlendirmesi gerektiğini belirtir.
+#		'server_name' direktifi, sunucunun hangi istemcileri dinleyeceğini belirler.
+#		Bu, Nginx'in gelen istekleri hangi alan adına veya ana bilgisayar adına göre eşleştireceğini belirlemek için kullanılır.
+#	📌server_name akaraca.42.fr;
+#
+#	 'ssl_certificate /etc/ssl/certs/nginx.crt;' ifadesi, Nginx'in kullanacağı SSL sertifikasının dosya yolunu belirtir.
+#		SSL, sertifikaları, web sunucularının güvenli HTTPS bağlantıları sağlamak için kullandığı dijital sertifikalardır.
+#	 'ssl_certificate' direktifi, Nginx'in genel anahtar altyapısını (Public Key Infrastructure - PKI) ile imzalanan sertifika dosyasının yolunu tanımlar.
+#	 Bu sertifika, web sitesinin gerçekliğini doğrulayan bir üçüncü taraf (CA - Certificate Authority) tarafından imzalanır ve ana bilgisayarın kimliğini doğrulamak için kullanılır.
+#		Web sunucusunun TLS(Transport Layer Security) bağlantılarında kullanılacak ve tarayıcılardan gelen istemcilere güvenli bir şekilde iletişim kurulmasını sağlayacaktır.
+#	📌ssl_certificate  /etc/ssl/certs/nginx.crt;
+#
+# 	'ssl_certificate_key /etc/ssl/private/nginx.key;' ifadesi, Nginx'in kullanacağı SSL sertifikasının özel anahtarının dosya yolunu belirtir.
+#		SSL/TLS bağlantıları güvenli hale getirmek için kullanılan sertifikalar, asimetrik kriptografi temelinde çalışır ve bir çift anahtardan oluşur: özel anahtar(private key) ve genel anahtar(public key)
+#		Özel anahtar, SSL/TLS bağlantısını başlatan sunucunun gizli anahtarıdır ve yalnızca sunucuda saklanır.
+#		Bu anahtar, şifrelenmiş verileri çözmek ve kimlik doğrulaması yapmak için kullanılır.
+#		Özel anahtar, yalnızca sunucu tarafından bilinir ve güvenli bir şekilde saklanmalıdır.
+#		Nginx tarafından SSL/TLS bağlantılarında kullanılır ve sertifika doğrulaması ve şifreleme işlemleri için kullanılır.
+#		Web sunucusunun güvenli bağlantılar kurmak ve verileri şifrelemek için kullanılır.
+#	📌ssl_certificate_key /etc/ssl/private/nginx.key;
+#
+#	 Sertifikasyon dosyalarının oluşturulması için nginx.sh'ın çalıştırılması gerekmektedir.
+#	 'ssl_protocols TLSv1.2 TLSv1.3;' ifadesi, Nginx'in desteklediği SSL/TLS protokollerini belirtmek için kullanılır.
+#	 'ssl_protocols' direktifi, sunucunun hangi SSL/TLS protokollerini kabul edeceğini belirler.
+#		Birden fazla protokol atanabilir, örneğin TLSv1.2 TLSv1.3 ...
+#		Bu şekilde Nginx'in yalnızca TLSv1.2 ve TLSv1.3 protokollerini kabul edeceği anlamına gelir.
+#		Eski ve güvensiz SSL/TLS sürümleri (örneğin, TLSv1.0 TLSv1.1) bu konfigürasyonda devre dışı bırakılır.
+#	📌ssl_protocols  TLSv1.2 TLSv1.3;
+#
+#	 'root' direktifi, Nginx sunucusunun istemcilere servis edeceği dosyaların kök dizinini belirtir.
+#		İstemci tarafından yapılan isteklere göre, Nginx bu belirtilen kök dizin altında bulunan dosyaları sunucudan alır ve istemciye gönderir.
+#	 İstemci, Nginx sunucusuna yaptığı bir istekte, 'var/www/html' dizininde bulunan dosyaları alır ve görüntüler.
+#		Bu, temel olarak web sitesi dosyalarının kök dizinini tanımlar ve kullanıcıların web sitesinin içeriğine erişebileceği yerdir.
+#	 İstemci, web sitelerine erişen ve sunucudan içerik talep eden kişisel bilgisayarlar, telefonlar vd. cihazlar olabilir.
+#	📌root /var/www/html;
+#
+#	 'index index.html' ifadesi, Nginx sunucusunun kök dizininde(root) bir istemci(web tarayıcısı) web sitesine istek yaptığında hangi dosyayı varsayılan olarak göstereceğini belirtir.
+#	 'index.html', varsayılan olarak gösterilecek olan dosya adını belirtir.
+#		Yani, istemci bir klasörün içine istek yaptığında ve o klasörde 'index.html' dosyası varsa, Nginx bu dosyayı gösterecektir.
+#		Örneğin, eğer bir istemci 'server_name' direktifindeki adresine(akaraca.42.fr) istek yaparsa, Nginx kök dizinindeki 'index.html' dosyasını gösterecektir.
+#	 Bu yapılandırma, özellikle basit statik web sitelerinde yaygın olarak kullanılır.
+#	 Eğer farklı bir varsayılan dosya adı kullanmak istenirse, 'index' direktifine farklı dosya adı eklenerek belirtilir.
+#		Örneğin, 'index index.php index.html;' şeklinde belirtilirse, Nginx önce 'index.php' dosyasını arayacak, eğer bulamazsa 'index.html' dosyasını gösterecektir.	
+#	index index.html;
+#		Ancak biz WordPress ve PHP-FPM kullanacağımızdan dolayı '.php' uzantılı dosyaları kullanmamız gerekecektir.
+#			WordPress, PHP tabanlı bir içerik yönetim sistemidir ve PHP betiklerini kullanarak içeriği oluşturur ve işler.
+#			Bu nedenle, WordPress'in düzgün çalışması için '.php' dosyalarının kullanılması gerekmektedir.
+#		WordPress teması ve eklentileri '.php' uzantılı dosyalar içerir  ve bu dosyaların Nginx tarafından doğru şekilde işlenmesi ve sunulması için 'index index.php;' şeklinde bir yapı kullanmanız gerekecektir.
+#	📌index index.php index.nginx-debian.html;
+#
+#	 'location /' bloğu, Nginx sunucusuna gelen tüm istemcilerin isteklerini ele alır.
+#		İstemciden gelen HTTP isteklerini yönlendirmek ve belirli işlemler yapmak için kullanılır.	
+#		İstemciden gelen URI'nin başlangıcına eşleşir, yani tüm istekler için geçerli olur.
+#		Bu nedenle, bu blok, sunucuya gelen tüm istekleri ele alır ve bunların nasıl işleneceğini belirler.
+#		URI, Uniform Resource Identifier'dir (Eşgüdümlü kaynak tanımlayıcısı).
+#			URI, bir kaynağa erişmek için kullanılan bir adrestir.
+#	📌location / {
+#
+#	 'uri' değişkeni, istemde bulunan dosyanın URI'sini temsil eder.
+#		Örneğin, 'http://localhost/index.html' isteminde, uri değişkeninin değeri 'index.html' olacaktır.
+#	 'try_files' direktifi, bu blok içinde belirtilen dosya veya dizinlerin varlığını kontrol eder ve uygun bir yanıt döndürür.
+#		'$uri' ifadesiyle istemciden gelen URI, mevcut bir dosya veya dizin olup olmadığını kontrol eder.
+#		Eğer dosya veya dizin varsa, o içeriği istemciye gönderir.
+#		Ancak, istemciden gelen URI mevcut bir dosya veya dizin değilse, '$uri/' ifadesiyle bir dizin olarak kontrol eder.
+#		Eğer dizin varsa ve o dizinde 'index' direkfitiyle belirtilen bir dosya varsa, o dosyanın içeriğini gönderir.
+#		Eğer dizin varsa ancak belirtilen bir 'index' dosyası yoksa, Nginx bu sefer dizindeki dosyaların listesini istemciye gönderir.
+#		Eğer hem dosya hem de dizin yoksa, '=404' ifadesi, '404 Not Found HTTP' hatası döndürerek istemciye dosyanın bulunamadığını belirtir.
+#		Bu şekilde, istemci tarafından yapılan isteklerin durumuna göre uygun yanıtlar döndüren bir yapı sağlanmış olur.
+#		Hata sayfasına yönlendirme olmadan özel bir yönlendirme istenirse bu şekilde yapılır.
+#	📌try_files $uri $uri/ /index.php$is_args$args;
+#	#try_files $uri $uri/ =404;
+# 	}
+#
+#	 'location ~ \.php$' ifadesi, nginx'in bir isteği işlerken URL'inde ".php" uzantısı olan dosyalara yönelik bir eşleştirme yapmasını sağlar.
+#		Bu blok, ".php" uzantılı dosyaların nginx tarafından PHP-FPM (FastCGI Process Manager) veya başka bir PHP yürütücüsüne yönlendirilmesini belirler.
+#	 'location': Bu, nginx konfigürasyonunda belirli URL kalıplarına göre yapılandırmalar yapmak için kullanılan bloklardan biridir.
+#	 '~': Bu, ifadenin bir düzenli ifade(regular expression) olduğunu belirtir.
+#		Yani, '.php' ifadesinin düzenli ifade olarak işlenmesini sağlar.
+#	 '\.php$': Bu düzenli ifade, URL'in sonunda ".php" uzantısını arar.
+#	 '$' karakteri URL'nin sonuna geldiğini belirtir.
+#	 Bu blok, '.php' uzantılı dosyalara gelen istekleri yakalar ve ilgili PHP yürütücüsüne yönlendirir.
+#		Örneğin, eğer PHP-FPM kullanıyorsanız, bu blok PHP-FPM'e bu dosyayı işlemesi için gönderir ve sonuç olarak PHP kodu çalıştırılır ve sonucu kullanıcıya gönderilir.
+#	📌location ~ \.php$ {
+#
+#	 'fastcgi_split_path_info' ifadesi, PHP dosyalarının yol bilgisini ayrıştırmak için kullanılır.
+#		Bu ifade, 'fastcgi_param' ile birlikte çalışarak, URL içindeki dosya adını ve ek yol bilgisini ayırır ve PHP-FPM'ye doğru şekilde iletilmesini sağlar.
+#		Ayrıştırılan değerler FastCGI parametrelerine atanmaktadır.
+#		Detaylar:
+#			'^': Metnin başlangıcında eşleşmesini belirtir.
+#				Örneğin, "abcdef" metni '^abc' deseniyle eşleşir, '^dde' deseniyle eşleşmez.
+#			'(.+\.php)': URL'de ".php" uzantısı içeren dosya adını yakalar ve parantez içine alır.
+#				'.+' ifadesi, en az bir veya daha fazla karakteri temsil eder, '\.' karakteri noktayı temsil eder ve 'php' kelimesi tam olarak "php" ile eşleşir. 
+#			'(/.+)': URL'de başka bir yol bilgisi parçasını yakalr ve parantez içine alır.
+#				'/.+' ifadesi, bir eğik çizgi ile başlayan ve an az bir veya daha fazla karakter içeren herhangi bir yol bilgisini temsil eder.	
+#		Bu ifade, bir URL'de ".php" uzantılı bir dosya adı ve ek bir yol bilgisi varsa, bu iki parçayı ayrıştırır ve PHP-FPM'ye doğru şekilde iletilmesini sağlar.
+#			Örneğin, eğer URL "/example.php/foo/bar" ise, bu ifade dosya adını "example.php" ve yol bilgisini "/foo/bar" olarak ayrıştırır ve PHP-FPM'ye "/example.php" dosyasını ve "/foo/bar" yol bilgisini işlemesi için iletilmesini sağlar.
+#			Bu şekilde, PHP kodu doğru şekilde çalıştırılır ve sonuç kullanıcıya gönderilir.
+#	 'FastCGI' nedir:
+#		FastCGI (Fast Common Gateway Interface), CGI'nin (Common Gateway Interface) daha hızlı ve verimli bir versiyonudur.
+#		CGI, web sunucusu ile dış kaynaklı programlar arasında iletişim kurmaya olanak tanıyan bir arayüzdür.
+#		Ancak, CGI'nin performansı düşüktür çünkü her istek için ayrı bir dış program çalıştırılır ve sonlandırılır.
+#		Bu nedenle, yoğun trafikli web sitelerinde CGI kullanmak verimsiz olabilir.
+#	📌fastcgi_split_path_info ^(.+\.php)(/.+)$;
+#
+#		 'fastcgi_pass' direktifi, PHP-FPM hizmetine yönlendirmeyi sağlayan bir nginx direktifidir.
+#			PHP dosyalarını çalıştırmak ve sonuçları nginx'e geri göndermek için kullanılan bir PHP FastCGI yöneticisidir.
+#			'fastcgi_pass' ile belirtilen değer, PHP-FPM hizmetinin adresini ve port numarasını belirtir.
+#				'fastcgi_pass wordpress:9000;' ifadesinde 'wordpress' ifadesi, docker-compose.yml dosyasında belirtilen PHP-FPM hizmetinin adını temsil eder ve '9000' ise PHP-FPM hizmetinin dinlemesi gereken port numarasını gösterir.
+# 		📌fastcgi_pass wordpress:9000;
+#
+#		 'fastcgi_index' direktifi, nginx'in PHP dosyalarını çalıştırırken hangi dosyanın varsayılan olarak çalıştırılacağını belirlemek için kullanılır.
+#			Yani, eğer bir URL'de belirtilen dosya adı yoksa, 'fastcgi_index' ile belirtilen dosya adı kullanılır.
+#		 Özellikle PHP ile çalışırken, genellikle 'index.php' dosyası ana dosyasıdır.
+#			Bu nedenle, 'fastcgi_index index.php;' ifadesi, eğer bir URL'de belirtilen dosya adı yoksa ve dizinde 'index.php' dosyası varsa, nginx'in 'index.php' dosyasını varsayılan olarak çalıştırmasını sağlar.
+#			Örneğin, 'htpp://example.com' URL'sine yapılan bir istek, nginx tarafından 'http://example.com/index.php' olarak işlenecektir, çünkü 'index.php' varsayılan dosya adı olarak belirtilmiştir.
+#			Bu, PHP dosyalarını çalıştıran uygulamalarda yaygın olarak kullanılan bir yöntemdir ve 'fastcgi_index' direktifi, doğrudan PHP dosyalarına erişimde kullanıcıların URL'lerini basitleştirir.
+# 		📌fastcgi_index index.php;
+#
+#		 'include fastcgi_params;' ifadesi, nginx'in PHP-FPM veya diğer FastCGI programıyla iletişim kurarken kullanılan FastCGI parametrelerini içeren bir dosyanın dahil edilmesini sağlar. 
+#		 'fastcgi_params' dosyası, nginx tarafından varsayılan olarak sağlanan FastCGI parametrelerini içerir ve bu parametreler, nginx ve FastCGI programları arasındaki isteklerin ve cevapların düzgün şekilde işlenmesini sağlar.
+#			Bu parametreler, PHP veya başka bir FastCGI programını çalıştıran uygulamalarda önemlidir, çünkü doğru bilgilerin iletilmesini ve işlenmesini sağlar.
+#		 'include fastcgi_params;' ifadesini kullanmak, FastCGI parametrelerini tekrar tekrar belirtmek yerine, bu parametreleri tek bir yerde yönetmeyi ve birden fazla yerde kullanmayı kolaylaştırır.
+#			Ayrıca, bu yöntem, güncelleştirmeler veya değişiklikler yapıldığında tek bir dosyayı güncelleştirmekle yetinmenizi sağlar, böylece ayarlarınızın tutarlı ve güncel kalmasını sağlar.
+#		 'fastcgi_params' dosyası, genellikle Nginx'i yüklerken veya yapılandırırken, Nginx paketiyle birlikte varsayılan 'fastcgi_params' dosyası otomatik olarak oluşturulur ve  '/etc/nginx/fastcgi_params' gibi bir konumda yer alır.
+#			Bu dosya, Nginx'in FastCGI uygulamaları (örneğin PHP-FPM) ile etkileşim kurarken gereken temel parametreleri tanımlar.
+# 		📌include fastcgi_params;
+#
+#		 'fastcgi_param', Nginx'in PHP-FPM gibi FastCGI uygulamalarına çeşitli ortam değişkenlerini aktarmasını sağlayan bir Nginx direktifidir.
+#			Bu değişken, PHP-FPM'ye özel bilgileri aktarmak için kullanılır ve PHP-FPM'nin doğru şekilde çalışmasını ve sonuçları işlemesini sağlar.
+#		 'fastcgi_param' ile belirtilen değişkenler, HTTP isteği veya Nginx'in diğer ayarlarında gelen değerlere dayanabilir.
+#			Örneğin, genellikle 'SCRIPT_FILENAME', 'SCRIPT_NAME', 'REQUEST_METHOD', 'QUERY_STRING' gibi değişkenler PHP-FPM'ye aktarılarak PHP kodunun doğru şekilde çalışması için gereklidir.
+#		 'fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;' direktifi, PHP-FPM ile iletilen dosya adını belirler.
+#			'$document_root' değişkeni, PHP dosyasının dizinini temsil eder. ve '$fastcgi_script_name' değişkeni ise PHP dosyasının adını içerir.
+#			Bu direktif sayesinde, PHP-FPM, doğru dosyayı çalıştırabilir ve PHP kodunu işleyebilir.
+#			Örnek, Nginx sunucunuzda 'var/www/html' dizini, PHP dosyalarınızın yer aldığı kök dizinidir ve 'example.php' adında bir PHP dosyanız var ve bu dosya '/var/www/html' dizini içindedir.
+#				O zaman direktif şu şekilde çalışır:
+#					'$document_root' değişkeni, 'var/www/html' değerini temsil eder(kök dizini).
+#					'$fastcgi_script_name' değişkeni, talepte bulunan PHP dosyasının adını içerir.
+#						Örneğin, eğer kullanıcı '/example.php' sayfasını talep ediyorsa, '$fastcgi_script_name' değişkeni '/example.php' değerini alır.
+#			Sonuç olarak, 'fastcgi_param SCRIPT_FILENAME /var/www/html/example.php;' şeklinde bir değer oluşur.
+#			Bu değer PHP-FPM tarafından talep edilen dosyanın tam yolu olan '/var/www/html/example.php' dosyasını belirtir.
+#			Böylece PHP-FPM, 'example.php' dosyasını çalıştırabilir ve PHP kodunu işleyebilir.
+#			Eğerki bu direktif kullanılmaz ise, PHP-FPM, talep edilen PHP dosyasının tam yolunu bilemeyeceği için PHP dosyasını çalıştıramaz ve işleyemez.
+# 		📌fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+#
+#		 'fastcgi_param SCRIPT_NAME $fastcgi_script_name;' direktifi, 'SCRIPT_NAME' adlı bir ortam değişkeni tanımlar ve ona '$fastcgi_script_name' değişkeninin değerini atar.
+#			Burada 'SCRIPT_NAME' ortam değişkenine 'example.php' değerini atar.
+# 		📌fastcgi_param SCRIPT_NAME $fastcgi_script_name;
+#
+#		 'fastcgi_param PATH_INFO $fastcgi_path_info;' direktifi, 'PATH_INFO' adlı bir ortam değişkeni tanımlar ve ona '$fastcgi_path_info' değişkeninin değerini atar.
+#			Bu değişken ekstra yol bilgisin içerir.
+#			Örneğin, PHP-FPM tarafından çalıştırılan bir PHP dosyası şu şekilde bir URI ile çağrıldı: 'http://example.com/user/profile.php/info'
+#				Bu durumda, 'PATH_INFO' değişkeni, '/info' değerini alacaktır.
+#				Yani, ekstra yol bilgisini içerir ve dosyasının adından sonraki ekstra yolu temsil eder.
+# 		📌fastcgi_param PATH_INFO $fastcgi_path_info;
+# 	}
+#
+#	'location ~ ^/adminer(/.*$|$)' ifadesi, "/adminer" veya "/adminer/" ile başlayan URL yollarını hedef alır ve o URL yollarına gelen isteklere nasıl yanıt verileceğini tanımlar.
+#		Bu şekilde belirli bir URL yoluna gelen istekler için özel işlemler veya yönlendirmelere yapılabiliyor.
+#	'~': Düzenli ifadeleri tanımak için kullanılan bir işaret.
+#		Yani bu blok, belirtilen URL yolunu düzenli ifade olarak ele alacaktır.
+#	'^/adminer': URL yolunun başındaki kısmın ne olması gerektiğini belirtir.
+#		Yani "/adminer" ile başlayan URL yollarını ele alacaktır.
+#	'(/.*$|$)': Bu kısım, URL yolunun devam eden kısmını belirtir.
+#		'(/.*$)' ile başlar, yani "/adminer" sonrasında gelen herhangi bir karakter dizinin kabul eder.
+#		'($|$)': ile biter, yani URL yolunun tamamının "/adminer" olmasını da kabul eder.
+# 	📌location ~ ^/adminer(/.*$|$) {
+# 		📌fastcgi_index index.php;
+# 		📌include /etc/nginx/fastcgi_params;
+# 		📌fastcgi_param SCRIPT_FILENAME /var/www/html/index.php;
+# 		📌fastcgi_pass adminer:9000;
+# 	}
+# }
+
+#############################################################################################################################################
