--- a/srcs/requirements/wordpress/conf/www.conf
+++ b/srcs/requirements/wordpress/conf/www.conf
@@ -1,9 +1,16 @@
-; How to find www.conf file?
-; https://github.com/php/php-src/blob/master/sapi/fpm/www.conf.in
-; or 
-; $> apt-get update && apt-get -y install php php-fpm
-; $> find /etc/php/7.3/fpm/pool.d/www.conf
-; -> debian:buster image içerisindeyken yapılmalıdır, bu sürüm haricinde php farklı bir versiyona sahip olabilir.
+; ################################################################### INFO ####################################################################
+; ### How to find www.conf file ###
+; # https://github.com/php/php-src/blob/master/sapi/fpm/www.conf.in
+; # or
+; # $> apt-get update && apt-get -y install php php-fpm
+; # $> find /etc/php/7.3/fpm/pool.d/www.conf
+; # -> debian:buster image içerisindeyken yapılmalıdır, bu sürüm haricinde php farklı bir versiyona sahip olabilir.
+;
+; ### [www] bloğu nedir ne işe yarar ###
+; # PHP-FPM (FastCGI Process Manager) havuz yapılandırma dosyasında bir havuzun (pool) ayarlarını belirlemek için kullanılır.
+; # Varsayılan olarak gelen PHP-FPM havuzunu tanımlar.
+; # PHP-FPM'nin çalışma şeklini ve havuzunun davranışını belirlemek için kullanılır.
+; #############################################################################################################################################
 
 ; Start a new pool named 'www'.
 ; the variable $pool can be used in any directive and will be replaced by the
@@ -445,4 +452,4 @@ pm.max_spare_servers = 10
 ;php_admin_value[error_log] = /var/log/fpm-php.www.log
 ;php_admin_flag[log_errors] = on
 ;php_admin_value[memory_limit] = 32M
-;---------------------------------wordpress/conf/www.conf---------------------------------
+;--------------------------------- wordpress/conf/www.conf ---------------------------------
