--- a/srcs/requirements/bonus/adminer/conf/www.conf
+++ b/srcs/requirements/bonus/adminer/conf/www.conf
@@ -1,9 +1,16 @@
-; How to find www.conf file?
-; https://github.com/php/php-src/blob/master/sapi/fpm/www.conf.in
-; or 
-; $> apt-get update && apt-get -y install php php-fpm
-; $> find /etc/php/7.3/fpm/pool.d/www.conf
-; -> debian:buster image içerisindeyken yapılmalıdır, bu sürüm haricinde php farklı bir versiyona sahip olabilir.
+; ################################################################### INFO ####################################################################
+; ### How to find www.conf file ###
+; # https://github.com/php/php-src/blob/master/sapi/fpm/www.conf.in
+; # or
+; # $> apt-get update && apt-get -y install php php-fpm
+; # $> find /etc/php/7.3/fpm/pool.d/www.conf
+; # -> debian:buster image içerisindeyken yapılmalıdır, bu sürüm haricinde php farklı bir versiyona sahip olabilir.
+;
+; ### [www] bloğu nedir ne işe yarar ###
+; # PHP-FPM (FastCGI Process Manager) havuz yapılandırma dosyasında bir havuzun (pool) ayarlarını belirlemek için kullanılır.
+; # Varsayılan olarak gelen PHP-FPM havuzunu tanımlar.
+; # PHP-FPM'nin çalışma şeklini ve havuzunun davranışını belirlemek için kullanılır.
+; #############################################################################################################################################
 
 ; Start a new pool named 'www'.
 ; the variable $pool can be used in any directive and will be replaced by the
@@ -19,21 +26,16 @@
 ; - 'chdir'
 ; - 'php_values'
 ; - 'php_admin_values'
-; When not set, the global prefix (or @php_fpm_prefix@) applies instead.
+; When not set, the global prefix (or /usr) applies instead.
 ; Note: This directive can also be relative to the global prefix.
 ; Default Value: none
 ;prefix = /path/to/pools/$pool
 
-; Unix user/group of the child processes. This can be used only if the master
-; process running user is root. It is set after the child process is created.
-; The user and group can be specified either by their name or by their numeric
-; IDs.
-; Note: If the user is root, the executable needs to be started with
-;       --allow-to-run-as-root option to work.
-; Default Values: The user is set to master process running user by default.
-;                 If the group is not set, the user's group is used.
-user = www-data;@php_fpm_user@
-group = www-data;@php_fpm_group@
+; Unix user/group of processes
+; Note: The user is mandatory. If the group is not set, the default user's group
+;       will be used.
+user = www-data
+group = www-data
 
 ; The address on which to accept FastCGI requests.
 ; Valid syntaxes are:
@@ -45,22 +47,22 @@ group = www-data;@php_fpm_group@
 ;                            (IPv6 and IPv4-mapped) on a specific port;
 ;   '/path/to/unix/socket' - to listen on a unix socket.
 ; Note: This value is mandatory.
-listen = 9000;127.0.0.1:9000
+;listen = /run/php/php7.3-fpm.sock
+listen = adminer:9000
 
 ; Set listen(2) backlog.
-; Default Value: 511 (-1 on Linux, FreeBSD and OpenBSD)
+; Default Value: 511 (-1 on FreeBSD and OpenBSD)
 ;listen.backlog = 511
 
 ; Set permissions for unix socket, if one is used. In Linux, read/write
 ; permissions must be set in order to allow connections from a web server. Many
 ; BSD-derived systems allow connections regardless of permissions. The owner
 ; and group can be specified either by name or by their numeric IDs.
-; Default Values: Owner is set to the master process running user. If the group
-;                 is not set, the owner's group is used. Mode is set to 0660.
-listen.owner = www-data;@php_fpm_user@
-listen.group = www-data;@php_fpm_group@
-listen.mode = 0660
-
+; Default Values: user and group are set as the running user
+;                 mode is set to 0660
+listen.owner = www-data
+listen.group = www-data
+;listen.mode = 0660
 ; When POSIX Access Control Lists are supported you can set them using
 ; these options, value is a comma separated list of user/group names.
 ; When set, listen.owner and listen.group are ignored
@@ -75,10 +77,6 @@ listen.mode = 0660
 ; Default Value: any
 ;listen.allowed_clients = 127.0.0.1
 
-; Set the associated the route table (FIB). FreeBSD only
-; Default Value: -1
-;listen.setfib = 1
-
 ; Specify the nice(2) priority to apply to the pool processes (only if set)
 ; The value can vary from -19 (highest priority) to 20 (lower priority)
 ; Note: - It will only work if the FPM master process is launched as root
@@ -87,9 +85,8 @@ listen.mode = 0660
 ; Default Value: no set
 ; process.priority = -19
 
-; Set the process dumpable flag (PR_SET_DUMPABLE prctl for Linux or
-; PROC_TRACE_CTL procctl for FreeBSD) even if the process user
-; or group is different than the master process user. It allows to create process
+; Set the process dumpable flag (PR_SET_DUMPABLE prctl) even if the process user
+; or group is differrent than the master process user. It allows to create process
 ; core dump and ptrace the process for the pool user.
 ; Default Value: no
 ; process.dumpable = yes
@@ -111,8 +108,6 @@ listen.mode = 0660
 ;                                    state (waiting to process). If the number
 ;                                    of 'idle' processes is greater than this
 ;                                    number then some children will be killed.
-;             pm.max_spawn_rate    - the maximum number of rate to spawn child
-;                                    processes at once.
 ;  ondemand - no children are created at startup. Children will be forked when
 ;             new requests will connect. The following parameter are used:
 ;             pm.max_children           - the maximum number of children that
@@ -131,28 +126,22 @@ pm = dynamic
 ; forget to tweak pm.* to fit your needs.
 ; Note: Used when pm is set to 'static', 'dynamic' or 'ondemand'
 ; Note: This value is mandatory.
-pm.max_children = 5
+pm.max_children = 30
 
 ; The number of child processes created on startup.
 ; Note: Used only when pm is set to 'dynamic'
-; Default Value: (min_spare_servers + max_spare_servers) / 2
-pm.start_servers = 2
+; Default Value: min_spare_servers + (max_spare_servers - min_spare_servers) / 2
+pm.start_servers = 5
 
 ; The desired minimum number of idle server processes.
 ; Note: Used only when pm is set to 'dynamic'
 ; Note: Mandatory when pm is set to 'dynamic'
-pm.min_spare_servers = 1
+pm.min_spare_servers = 3
 
 ; The desired maximum number of idle server processes.
 ; Note: Used only when pm is set to 'dynamic'
 ; Note: Mandatory when pm is set to 'dynamic'
-pm.max_spare_servers = 3
-
-; The number of rate to spawn child processes at once.
-; Note: Used only when pm is set to 'dynamic'
-; Note: Mandatory when pm is set to 'dynamic'
-; Default Value: 32
-;pm.max_spawn_rate = 32
+pm.max_spare_servers = 10
 
 ; The number of seconds after which an idle process will be killed.
 ; Note: Used only when pm is set to 'ondemand'
@@ -163,10 +152,10 @@ pm.max_spare_servers = 3
 ; This can be useful to work around memory leaks in 3rd party libraries. For
 ; endless request processing specify '0'. Equivalent to PHP_FCGI_MAX_REQUESTS.
 ; Default Value: 0
-;pm.max_requests = 500
+; pm.max_requests = 1000
 
 ; The URI to view the FPM status page. If this value is not set, no URI will be
-; recognized as a status page. It shows the following information:
+; recognized as a status page. It shows the following informations:
 ;   pool                 - the name of the pool;
 ;   process manager      - static, dynamic or ondemand;
 ;   start time           - the date and time FPM has started;
@@ -256,29 +245,13 @@ pm.max_spare_servers = 3
 ;   last request memory:  0
 ;
 ; Note: There is a real-time FPM status monitoring sample web page available
-;       It's available in: @EXPANDED_DATADIR@/fpm/status.html
+;       It's available in: /usr/share/php/7.3/fpm/status.html
 ;
 ; Note: The value must start with a leading slash (/). The value can be
 ;       anything, but it may not be a good idea to use the .php extension or it
 ;       may conflict with a real PHP file.
 ; Default Value: not set
 ;pm.status_path = /status
-
-; The address on which to accept FastCGI status request. This creates a new
-; invisible pool that can handle requests independently. This is useful
-; if the main pool is busy with long running requests because it is still possible
-; to get the status before finishing the long running requests.
-;
-; Valid syntaxes are:
-;   'ip.add.re.ss:port'    - to listen on a TCP socket to a specific IPv4 address on
-;                            a specific port;
-;   '[ip:6:addr:ess]:port' - to listen on a TCP socket to a specific IPv6 address on
-;                            a specific port;
-;   'port'                 - to listen on a TCP socket to all addresses
-;                            (IPv6 and IPv4-mapped) on a specific port;
-;   '/path/to/unix/socket' - to listen on a unix socket.
-; Default Value: value of the listen option
-;pm.status_listen = 127.0.0.1:9001
 
 ; The ping URI to call the monitoring page of FPM. If this value is not set, no
 ; URI will be recognized as a ping page. This could be used to test from outside
@@ -312,13 +285,13 @@ pm.max_spare_servers = 3
 ;  %d: time taken to serve the request
 ;      it can accept the following format:
 ;      - %{seconds}d (default)
-;      - %{milliseconds}d
-;      - %{milli}d
+;      - %{miliseconds}d
+;      - %{mili}d
 ;      - %{microseconds}d
 ;      - %{micro}d
 ;  %e: an environment variable (same as $_ENV or $_SERVER)
 ;      it must be associated with embraces to specify the name of the env
-;      variable. Some examples:
+;      variable. Some exemples:
 ;      - server specifics like: %{REQUEST_METHOD}e or %{SERVER_PROTOCOL}e
 ;      - HTTP headers like: %{HTTP_HOST}e or %{HTTP_USER_AGENT}e
 ;  %f: script filename
@@ -348,33 +321,17 @@ pm.max_spare_servers = 3
 ;  %t: server time the request was received
 ;      it can accept a strftime(3) format:
 ;      %d/%b/%Y:%H:%M:%S %z (default)
-;      The strftime(3) format must be encapsulated in a %{<strftime_format>}t tag
+;      The strftime(3) format must be encapsuled in a %{<strftime_format>}t tag
 ;      e.g. for a ISO8601 formatted timestring, use: %{%Y-%m-%dT%H:%M:%S%z}t
 ;  %T: time the log has been written (the request has finished)
 ;      it can accept a strftime(3) format:
 ;      %d/%b/%Y:%H:%M:%S %z (default)
-;      The strftime(3) format must be encapsulated in a %{<strftime_format>}t tag
+;      The strftime(3) format must be encapsuled in a %{<strftime_format>}t tag
 ;      e.g. for a ISO8601 formatted timestring, use: %{%Y-%m-%dT%H:%M:%S%z}t
 ;  %u: remote user
 ;
 ; Default: "%R - %u %t \"%m %r\" %s"
-;access.format = "%R - %u %t \"%m %r%Q%q\" %s %f %{milli}d %{kilo}M %C%%"
-
-; A list of request_uri values which should be filtered from the access log.
-;
-; As a security precuation, this setting will be ignored if:
-;     - the request method is not GET or HEAD; or
-;     - there is a request body; or
-;     - there are query parameters; or
-;     - the response code is outwith the successful range of 200 to 299
-;
-; Note: The paths are matched against the output of the access.format tag "%r".
-;       On common configurations, this may look more like SCRIPT_NAME than the
-;       expected pre-rewrite URI.
-;
-; Default Value: not set
-;access.suppress_path[] = /ping
-;access.suppress_path[] = /health_check.php
+;access.format = "%R - %u %t \"%m %r%Q%q\" %s %f %{mili}d %{kilo}M %C%%"
 
 ; The log file for slow requests
 ; Default Value: not set
@@ -433,7 +390,7 @@ pm.max_spare_servers = 3
 
 ; Redirect worker stdout and stderr into main error log. If not set, stdout and
 ; stderr will be redirected to /dev/null according to FastCGI specs.
-; Note: on highloaded environment, this can cause some delay in the page
+; Note: on highloaded environement, this can cause some delay in the page
 ; process time (several ms).
 ; Default Value: no
 ;catch_workers_output = yes
@@ -486,7 +443,7 @@ pm.max_spare_servers = 3
 ; instead.
 
 ; Note: path INI options can be relative and will be expanded with the prefix
-; (pool, global or @prefix@)
+; (pool, global or /usr)
 
 ; Default Value: nothing is defined by default except the values in php.ini and
 ;                specified at startup with the -d argument
@@ -495,4 +452,4 @@ pm.max_spare_servers = 3
 ;php_admin_value[error_log] = /var/log/fpm-php.www.log
 ;php_admin_flag[log_errors] = on
 ;php_admin_value[memory_limit] = 32M
-;---------------------------------bonus/adminer/conf/www.conf---------------------------------
+;--------------------------------- bonus/adminer/conf/www.conf ---------------------------------
